--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ h2 {
   letter-spacing: .14em;
   line-height: 1em;
   color: #fff;
+
 }
 
 h1 {
@@ -20,6 +21,7 @@ h1 {
   letter-spacing: .14em;
   line-height: 1em;
   color: #fff;
+  margin-bottom: 50px;
 }
 
 .landing-page h1 {
@@ -28,6 +30,7 @@ h1 {
 
 .landing-page h2 {
   margin: 35px;
+  margin-bottom: 70px;
 }
 
 span {
@@ -39,14 +42,15 @@ a {
   color: #fff;
   border: 2px solid #fff;
   transition: color 170ms ease-in-out, border-color 170ms ease-in-out;
-  padding: 10px;
+  padding: 15px;
   text-decoration: none;
   font-style: normal;
-  font-size: 13px;
+  font-size: 15px;
   text-transform: uppercase;
   letter-spacing: .14em;
   line-height: 1em;
   cursor: pointer;
+
 }
 
 a:hover, input[type="submit"]:hover {
