--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,9 @@ form {
 }
 
 form h1 {
-  font-size: 40px;
+  font-size: 35px;
+  margin-top: 70px;
+  margin-bottom: 20px;
 }
 
 input[type="text"] {
@@ -91,8 +93,8 @@ input[type="text"] {
 input[type="submit"] {
   width: 120px;
   height: 45px;
-  background-color: #fff;
-  color: black;
+  background-color: transparent;
+  color: #fff;
   border: 2px solid #fff;
   transition: color 170ms ease-in-out, border-color 170ms ease-in-out;
   padding: 10px;
@@ -103,7 +105,7 @@ input[type="submit"] {
   letter-spacing: .14em;
   line-height: 1em;
   cursor: pointer;
-  margin-top: 10px;
+  margin-top: 40px;
   border-radius: 2px;
 }
 
