--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,23 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
-  background-image: url('./new_york_city.jpg');
+  font-family: 'Nunito', sans-serif;
+  background-image: url('./snazzy-image.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100%;
   color: #fff;
 }
 
-@media (max-width: 1298px) {
+@media (max-width: 1288px) {
   body {
-    background-size: 150%;
+    background-size: 120%;
+  }
+}
+
+@media (max-width: 1074px) {
+  body {
+    background-size: 140%;
   }
 }
 
@@ -27,29 +33,50 @@ body {
   }
 }
 
-@media (max-width: 749px) {
+@media (max-width: 717px) {
   body {
-    background-color: #212121;
+    background-size: 200%;
   }
 }
 
-@media (max-width: 710px) {
+@media (max-width: 645px) {
   body {
-    background-color: #212121;
-    background-image: none;
+    background-size: 220%;
   }
 }
 
-@media (max-width: 599px) {
+@media (max-width: 585px) {
   body {
-    background-color: #212121;
-    background-image: none;
+    background-size: 240%;
   }
 }
 
-@media (max-width: 499px) {
+@media (max-width: 538px) {
   body {
-    background-color: #212121;
-    background-image: none;
+    background-size: 260%;
+  }
+}
+
+@media (max-width: 495px) {
+  body {
+    background-size: 280%;
+  }
+}
+
+@media (max-width: 460px) {
+  body {
+    background-size: 300%;
+  }
+}
+
+@media (max-width: 429px) {
+  body {
+    background-size: 320%;
+  }
+}
+
+@media (max-width: 403px) {
+  body {
+    background-size: 340%;
   }
 }
