--- a/src/App.css
+++ b/src/App.css
@@ -3,22 +3,22 @@
 }
 
 h2 {
-  font-weight: 500;
+  font-weight: 600;
   font-style: normal;
-  font-size: 22px;
+  font-size: 20px;
   text-transform: uppercase;
-  letter-spacing: .14em;
+  letter-spacing: .10em;
   line-height: 1em;
   color: #fff;
 
 }
 
 h1 {
-  font-weight: bold;
+  font-weight: 600;
   font-style: normal;
-  font-size: 45px;
+  font-size: 60px;
   text-transform: uppercase;
-  letter-spacing: .14em;
+  letter-spacing: .0em;
   line-height: 1em;
   color: #fff;
   margin-bottom: 50px;
@@ -26,11 +26,20 @@ h1 {
 
 .landing-page h1 {
   margin-top: 185px;
+  text-transform: none;
 }
 
 .landing-page h2 {
   margin: 35px;
-  margin-bottom: 70px;
+  margin-bottom: 100px;
+  text-transform: none;
+}
+
+.landing-page h2:nth-child(3) {
+  margin: 35px;
+  margin-bottom: 100px;
+  text-transform: none;
+  font-size: 18px;
 }
 
 span {
