--- a/src/App.css
+++ b/src/App.css
@@ -129,8 +129,27 @@ select {
   cursor: pointer;
 }
 
-@media (max-width: 900px) {
-  #x-icon {
-    margin-right: 60px;
+@media (max-width: 539px) {
+
+  input[type='text'] {
+    width: 90%;
+  }
+
+  form {
+    width: 60%;
+  }
+
+  .landing-page h2 {
+    margin-top: 35px;
+    margin-bottom: 0px;
+    text-transform: none;
+  }
+
+  .landing-page h1 {
+    margin-top: 40px;
+  }
+
+  .landing-page h2:nth-child(3) {
+    margin-bottom: 30px;
   }
 }
