--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 }
 
 body {
-  background-image: url('./snazzy-image.png');
+  background: linear-gradient(#5964d5, #59c1ee);
+  height: 100vh;
 }
 
 .nav {
@@ -12,7 +13,7 @@ body {
   padding: 25px;
 }
 
-h2 {
+/* h2 {
   font-weight: 600;
   font-style: normal;
   font-size: 20px;
@@ -31,9 +32,9 @@ h1 {
   line-height: 1em;
   color: #fff;
   margin-bottom: 50px;
-}
+} */
 
-.landing-page h1 {
+/* .landing-page h1 {
   margin-top: 185px;
   text-transform: none;
 }
@@ -42,9 +43,9 @@ h1 {
   margin: 35px;
   margin-bottom: 100px;
   text-transform: none;
-}
+} */
 
-.landing-page h2:nth-child(3) {
+/* .landing-page h2:nth-child(3) {
   margin: 35px;
   margin-bottom: 100px;
   text-transform: none;
@@ -153,53 +154,97 @@ p {
 .terms-and-conditions div {
   margin: 0 auto;
   width: 80%;
-}
+} */
 
 .invite {
-  background-color: #fff;
-  height: 100vh;
-  color: black;
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  width: 40%;
+  margin: 0 auto;
+}
+
+h1 {
+  font-size: 4.3em;
+  font-weight: 400;
+  margin-top: 80px;
+  margin-bottom: 0;
+}
+
+p {
+  font-size: 1.8em;
+  font-weight: 300;
+  margin-top: 5px;
+}
+
+input {
+  width: 100%;
+  border: 2px solid #fff;
+  border-radius: 22px;
+  font-size: 20px;
+  color: #999999;
+  line-height: 40px;
+  margin-top: 40px;
+}
+
+input[type='checkbox'] {
+  margin-top: 15px;
+  background-color: black;
+}
+
+label {
+  width: 100%;
+  font-size: 0.8em;
+}
+
+.inline-field input,
+.inline-field label {
+  display: inline-block;
+  margin-bottom: 0;
+  vertical-align: middle;
+}
+
+a {
+  color: #ffffff;
+}
+
+.copyright {
+  font-size: 1em;
+  text-align: center;
+  margin-top: 80%;
+}
+
+#logo-box {
+  margin-top: 30px;
+  border: 4px solid #fff;
+  width: 10%;
+  text-align: center;
+  padding: 5px;
+  font-weight: 400;
+  font-size: 2.5em;
+}
+
+/* .invite form {
 }
 
 .invite form {
-  margin-top: 150px;
-}
-
-.invite form {
-  font-family: 'Cormorant Garamond', serif;
-  width: 70%;
 }
 
 .invite input[type='text'] {
-  font-family: 'Cormorant Garamond', serif;
 }
 
 .invite input[type='submit'] {
-  background-color: #1e88e5;
-  width: 140px;
-  height: 40px;
-  font-size: 14px;
-  border-radius: 6px;
-  font-family: 'Cormorant Garamond', serif;
 }
 
 .invite input[type='submit']:hover {
-  background-color: #1e88e5;
-  color: white;
 }
 
 .invite a {
-  border: none;
-  font-size: 18px;
 }
 
 .invite input[type='checkbox'] {
-  margin-top: 30px;
 }
 
 .invite a:hover {
-  background-color: transparent;
-  color: #fff;
 }
 
 #terms-header {
@@ -267,4 +312,4 @@ iframe {
   .landing-page h2:nth-child(3) {
     margin-bottom: 30px;
   }
-}
+} */
