--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,7 @@
 }
 
 body {
-  background: linear-gradient(#5964d5, #59c1ee);
-  height: 100vh;
+  background: linear-gradient(#5964d5, #59c1ee) fixed;
 }
 
 .nav {
@@ -156,6 +155,8 @@ p {
   width: 80%;
 } */
 
+/* Invite Component */
+
 .invite {
   color: #fff;
   font-family: 'Montserrat', sans-serif;
@@ -177,7 +178,7 @@ p {
 }
 
 input {
-  width: 100%;
+  width: 80%;
   border: 2px solid #fff;
   border-radius: 22px;
   font-size: 20px;
@@ -187,20 +188,18 @@ input {
 }
 
 input[type='checkbox'] {
-  margin-top: 15px;
-  background-color: black;
+  margin-top: 20px;
+  margin-right: 0px;
+  width: 30px;
 }
 
 label {
-  width: 100%;
   font-size: 0.8em;
 }
 
-.inline-field input,
-.inline-field label {
+.inline-input {
   display: inline-block;
-  margin-bottom: 0;
-  vertical-align: middle;
+  width: 100%;
 }
 
 a {
@@ -210,17 +209,24 @@ a {
 .copyright {
   font-size: 1em;
   text-align: center;
-  margin-top: 80%;
+  position: fixed;
+  left: 0;
+  bottom: 40px;
+  width: 100%;
+  text-align: center;
 }
 
 #logo-box {
-  margin-top: 30px;
-  border: 4px solid #fff;
+  margin-top: 40px;
+  border-style: solid;
+  border-color: #fff;
+  border-width: 4px;
+  line-height: 54px;
   width: 10%;
   text-align: center;
   padding: 5px;
   font-weight: 400;
-  font-size: 2.5em;
+  font-size: 2.7em;
 }
 
 /* .invite form {
