--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
   color: #fff;
   font-family: 'Montserrat', sans-serif;
   height: 100vh;
-  width: 35%;
+  width: 37%;
   margin: 0 auto;
 }
 
@@ -69,20 +69,20 @@ input {
   opacity: 1 !important;
 }
 
-input[type='checkbox'] {
+/* input[type='checkbox'] {
   margin-top: 20px;
   margin-right: 0px;
   width: 30px;
-}
+} */
 
 label {
   font-size: 0.8em;
 }
 
-.inline-input {
+/* .inline-input {
   display: inline-block;
   width: 100%;
-}
+} */
 
 a {
   color: #ffffff;
