--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,12 @@ body {
   margin: 0 auto;
 }
 
+/*
 .landing-page h1 span {
   font-family: 'Montserrat Alternates', sans-serif;
   font-weight: 400;
 }
+*/
 
 h1 {
   letter-spacing: -4px;
