--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ input {
   color: #999999;
   line-height: 40px;
   padding-left: 40px;
-  background: url(icon_device_24x24.png) no-repeat left top; 
+  background: #FFF url(icon_device_24x24.png) no-repeat left middle; 
 
 }
 
