--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,8 @@ p {
 
 input {
   width: 400px;
-  border: 0 none;
+  border: 2px solid #fff;
+  border-radius: 22px;
   font-family: 'Montserrat', sans-serif;
   font-style: italic;
   font-size: 16px;
