--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@ input {
   border-radius: 22px;
   margin: 60x 0 10px 0;
   font-family: 'Montserrat', sans-serif;
-  font-size: 100%;
+  font-size: 125%;
   color: #999999;
   line-height: 40px;
   padding-left: 40px;
@@ -311,6 +311,7 @@ a {
     width: 290px;
     margin: 60px 0 10px 0;
     height: 32px;
+    font-size: 100%
   }
 
   h1 {
