--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,12 @@ h1 {
   margin-bottom: 0;
 }
 
+h2 {
+  font-size: 250%;
+  font-weight: 600;
+  margin: 25px 0 25px 0;
+}
+
 .typed-text span {
   display: inline-block;
   font-family: 'Montserrat', sans-serif;
@@ -291,8 +297,17 @@ a {
     width: 70%;
     font-size: 1em
   }
+  
+  h2 {
+  font-size: 250%;
+  font-weight: 600;
+  margin: 25px 0 25px 0;
+  }
 
-  p,
+  p {
+   font-size: 90%;
+  }
+  
   .taglineStatic,
   .taglineDynamic, {
     font-size: 100%;
