--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,12 @@
 }
 
 body {
-  background: linear-gradient(#5964d5, #59c1ee 90%) fixed;
+  background: #f6f6f4;
   font-family: 'Montserrat', sans-serif;
   color: #fff;
   font-size: .75em;
+  margin: 0;
+  padding-bottom: 60px;
 }
 
 .nav {
@@ -16,7 +18,6 @@ body {
 }
 
 .landing-page {
-  height: 100vh;
   width: 37%;
   margin: 0 auto;
 }
@@ -32,8 +33,10 @@ h1 {
   letter-spacing: -4px;
   font-size: 400%;
   font-weight: 400;
-  margin-top: 65px;
+  margin-top: 25px;
   margin-bottom: 0;
+  color:black;
+
 }
 
 h2 {
@@ -84,27 +87,35 @@ p.verySmallText {
 input {
   width: 350px;
   border: 2px solid #fff;
-  border-radius: 22px;
-  margin: 60x 0 25px 0;
+  border-radius: 6px;
   font-family: 'Montserrat', sans-serif;
-  font-size: 125%;
+  font-size: 1.15rem;
   color: #999999;
   line-height: 40px;
-  padding-left: 40px;
-  background: url(icon_device_24x24.png) no-repeat 10px 9px white;
-  background-size: 24px 24px; 
+  padding: 5px 10px 9px;
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.15);
+  font-size: .9rem;
+}
+
+.logo {
+  margin-top: 30px;
 }
 
 button {
-    margin-left: -50px;
-    height: 46px;
-    width: 46px;
-    background: blue;
+    margin-left: -65px;
+    height: 40px;
+    width: 50px;
+    background: #3bdedb;
     color: white;
     border: 0;
     -webkit-appearance: none;
-    background: url(icon_arrow_36x36_grey.png) no-repeat 8px 3px;
     vertical-align: middle;
+    border-radius: 4px;
+    padding-right: 10px;
+}
+
+button:disabled {
+  background: #c5c5c5;
 }
 
 ::-webkit-input-placeholder {
@@ -114,8 +125,17 @@ button {
 }
 
 form {
-margin: 10px 0 0 0;
-display: inline-block;
+  margin: 10px 0 0 0;
+  display: inline-block;
+}
+
+form p {
+  color: rgba(0,0,0,.5);
+}
+
+form p a {
+  color: rgba(0,0,0,.5);
+  font-weight: bold;
 }
 
 input[type='checkbox'] {
@@ -138,13 +158,16 @@ a {
   position: fixed;
   left: 0;
   right: 0;
-  bottom: 20px;
-  width: 100%;
+  bottom: 0px;
+  width: 95%;
+  margin: 0 auto;
+  height: 60px;
+  color: rgba(0,0,0,.5);
 }
 
 .copyright img {
-  width: 12px;
-  height: 12px;
+  width: 50px;
+  height: 50px;
 }
 
 #logo-box {
@@ -174,14 +197,6 @@ a {
 @media (max-width: 1299px) {
   .landing-page {
     width: 40%;
-  }
-
-  input {
-    width: 452px;
-  }
-
-  button {
-    background: url(icon_arrow_36x36_grey.png) no-repeat 8px 5px;
   }
 }
 
@@ -318,7 +333,7 @@ a {
   h1 {
     font-size: 300%;
     font-weight: 500;
-    margin-top: 50px;
+    margin-top: 20px;
     margin-bottom: 0;
   }
   
@@ -350,15 +365,9 @@ a {
 
 }
 
-@media (max-width: 470px) {
-  .landing-page {
-    width: 75%;
-  }
-}
-
 @media (max-width: 437px) {
   .landing-page {
-    width: 83%;
+    width: 95%;
   }
 
   input {
@@ -375,3 +384,153 @@ a {
     width: 285px;
   }
 }
+
+.typing-text {
+  margin: 20px 0 30px;
+}
+
+.typing-text .element {
+  font-size: 1.5rem;
+  color: #252525;
+}
+
+#conversation div {
+  margin: 4px 0;
+}
+
+.typing {
+  background-color: #FFF;
+  will-change: transform;
+  width: auto;
+  border-radius: 6px;
+  padding: 12px;
+  display: table;
+  position: relative;
+  border: 1px solid #ddd;
+}
+
+.user-typed-message {
+  background-color: #3bdedb !important;
+  color: white;
+}
+
+.typed-message {
+  background-color: #8a75fb;
+  will-change: transform;
+  width: auto;
+  border-radius: 6px;
+  padding: 12px;
+  display: table;
+  position: relative;
+  color: white;
+}
+
+.typed-message p {
+  margin: 0;
+  padding: 0;
+  font-weight: 200;
+  font-size: 14px;
+}
+
+.typed-message p strong{
+  font-weight: 400;
+}
+
+/*.typing::before, .typing::after {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: -2px;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background-color: #E6E7ED;
+}
+.typing::after {
+  height: 10px;
+  width: 10px;
+  left: -10px;
+  bottom: -10px;
+}*/
+.typing span {
+  height:8px;
+  width: 8px;
+  float: left;
+  margin: 0 1px;
+  background-color: #9E9EA1;
+  display: block;
+  border-radius: 50%;
+  opacity: .7;
+}
+.typing span:nth-of-type(1) {
+  -webkit-animation: 1s blink infinite 0.3333s;
+          animation: 1s blink infinite 0.3333s;
+}
+.typing span:nth-of-type(2) {
+  -webkit-animation: 1s blink infinite 0.6666s;
+          animation: 1s blink infinite 0.6666s;
+}
+.typing span:nth-of-type(3) {
+  -webkit-animation: 1s blink infinite 0.9999s;
+          animation: 1s blink infinite 0.9999s;
+}
+
+@-webkit-keyframes blink {
+  50% {
+    opacity: 1;
+  }
+}
+
+@keyframes blink {
+  50% {
+    opacity: 1;
+  }
+}
+
+.buttons button {
+  width: 50%;
+  padding: 14px;
+  background-color: #3bdedb;
+}
+
+.copyright p {
+  margin: 0;
+  padding: 15px 0 0;
+  color: rgba(0,0,0,.5);
+}
+
+.right {
+  float: right;
+}
+
+.left {
+  float: left;
+}
+
+.clear-both {
+  clear: both;
+}
+
+.btn {
+    padding: 18px 5px;
+    width: 33%;
+    background-color: #3bdedb;
+    color: white;
+    margin: 3px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-decoration: none;
+    border-radius: 10px;
+    font-size: 1rem;
+}
+
+.btn-row {
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    width:100%;
+
+}
+    
