--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,38 @@
+.typing-indicator {
+  background-color: #FFF;
+  will-change: transform;
+  width: auto;
+  border-radius: 6px;
+  padding: 10px;
+  display: table;
+  margin: 0 auto;
+  position: relative;
+  margin: 4px 0;
+}
+.divider {
+    height: 55px;
+}
+.typing-indicator p.hidden {
+    display: none;
+}
+.typing-indicator.user {
+    float: right;
+    clear: both;
+    background-color: #39ebd5;
+    padding: 0px 10px;
+}
+
+.typing-indicator span {
+  height: 10px;
+  width: 10px;
+  float: left;
+  margin: 0 1px;
+  background-color: #7857A4;
+  display: block;
+  border-radius: 50%;
+  opacity: 0.4;
+}
+
 .App {
   text-align: center;
 }
@@ -21,13 +56,6 @@ body {
   width: 37%;
   margin: 0 auto;
 }
-
-/* REMOVED IN FAVOR OF PNG
-.landing-page h1 span {
-  font-family: 'Montserrat Alternates', sans-serif;
-  font-weight: 400;
-}
-*/
 
 h1 {
   letter-spacing: -4px;
@@ -95,6 +123,7 @@ input {
   padding: 5px 10px 9px;
   box-shadow: 0px 2px 4px rgba(0,0,0,0.15);
   font-size: .9rem;
+  outline: none;
 }
 
 .logo {
@@ -105,13 +134,17 @@ button {
     margin-left: -65px;
     height: 40px;
     width: 50px;
-    background: #3bdedb;
+    background: #39ebd5;
     color: white;
     border: 0;
     -webkit-appearance: none;
     vertical-align: middle;
     border-radius: 4px;
     padding-right: 10px;
+}
+
+button img {
+    vertical-align: middle;
 }
 
 button:disabled {
@@ -142,7 +175,7 @@ input[type='checkbox'] {
   margin-top: 20px;
   margin-right: 0px;
   width: 30px;
-} 
+}
 
 label {
   font-size: 0.8em;
@@ -328,15 +361,15 @@ a {
     width: 70%;
     font-size: 1em
   }
-  
-  
+
+
   h1 {
     font-size: 300%;
     font-weight: 500;
     margin-top: 20px;
     margin-bottom: 0;
   }
-  
+
   h2 {
   font-size: 175%;
   font-weight: 600;
@@ -346,12 +379,12 @@ a {
   p {
    font-size: 100%;
   }
-  
+
   .taglineStatic,
   .taglineDynamic, {
     font-size: 100%;
   }
-  
+
   p.smallerText {
   font-size: 90%;
   }
@@ -392,6 +425,10 @@ a {
 .typing-text .element {
   font-size: 1.5rem;
   color: #252525;
+}
+
+#conversation {
+    max-width: 450px;
 }
 
 #conversation div {
@@ -457,10 +494,10 @@ a {
   width: 8px;
   float: left;
   margin: 0 1px;
-  background-color: #8a75fb;
+  background-color: #9E9EA1;
   display: block;
   border-radius: 50%;
-  opacity: .5;
+  opacity: .7;
 }
 .typing span:nth-of-type(1) {
   -webkit-animation: 1s blink infinite 0.3333s;
@@ -511,6 +548,10 @@ a {
   clear: both;
 }
 
+.hidden {
+  display: none;
+}
+
 .btn {
     padding: 18px 5px;
     width: 33%;
@@ -532,12 +573,4 @@ a {
     justify-content: center;
     width:100%;
 
-}
-
-.user-phone-number {
-  font-weight: bold;
-}
-
-.hidden {
-  display: none;
 }
