--- a/src/App.css
+++ b/src/App.css
@@ -193,7 +193,7 @@ a {
   right: 0;
   bottom: 0px;
   width: 95%;
-  margin: 0 auto;
+  margin: 0 auto 20px;
   height: 60px;
   color: rgba(0,0,0,.5);
 }
