--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,7 @@ input {
   box-shadow: 0px 2px 4px rgba(0,0,0,0.15);
   font-size: .9rem;
   outline: none;
+  -webkit-appearance: none;
 }
 
 .logo {
