Changed the button colors

--- a/src/App.css
+++ b/src/App.css
@@ -573,7 +573,7 @@ a {
 .btn {
     padding: 18px 5px;
     width: 33%;
-    background-color: #3bdedb;
+    background-color: #0F0446;
     color: white;
     margin: 3px;
     text-align: center;
