--- a/src/App.css
+++ b/src/App.css
@@ -579,6 +579,11 @@ a {
   display: none; 
 }
 
+.is-typing {
+  padding: 12px;
+  height: 11px;
+}
+
 .btn {
     padding: 18px 5px;
     width: 33%;
